<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hirbod.randomnumbergenerator.MainActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:id="@+id/Generate_BTN"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/Generate_BTN"
        android:layout_toStartOf="@+id/Generate_BTN" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/MaxNum"
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Generate_BTN" />

    <EditText
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/MaxNumber_EditText"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignRight="@+id/Generate_BTN"
        android:layout_alignEnd="@+id/Generate_BTN" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/MinNum"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:id="@+id/MinNumber_EditText"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_alignRight="@+id/Generate_BTN"
        android:layout_alignEnd="@+id/Generate_BTN" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AutoCopy"
        android:id="@+id/checkBox"
        android:layout_below="@+id/MinNumber_EditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Copy"
        android:id="@+id/Copy_BTN"
        android:layout_alignTop="@+id/checkBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="By Hirbod Behnam"
        android:id="@+id/textView"
        android:layout_above="@+id/BottomOfPageLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        android:id="@+id/SettingsBTN"
        android:layout_above="@+id/BottomOfPageLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/BottomOfPageLayout"
        android:gravity="center_horizontal">
        <ir.tapsell.sdk.bannerads.TapsellBannerView
            android:id="@+id/banner_ad_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tapsell_banner_type="banner_320x50"
            app:tapsell_zone_id="5cfd01d63ea54800014dd610"
            android:background="@android:color/transparent"
            android:layout_marginTop="2dp"/>
    </LinearLayout>

</RelativeLayout>
